syntax = "proto3";

package storage;

option go_package = "github.com/maxpoletaev/kivi/storage/proto";

message GetRequest {
    string key = 1;
}

message VersionedValue {
    string version = 1;
    bool tombstone = 2;
    bytes data = 3;
}

message GetResponse {
    repeated VersionedValue value = 2;
}

message PutRequest {
    string key = 1;
    bool primary = 2;
    VersionedValue value = 3;
}

message PutResponse {
    string version = 1;
}

message ScanRequest {
    string start_key = 1;
}

message ScanResponse {
    string key = 1;
    repeated VersionedValue value = 2;
}

service Storage {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
    rpc Scan(ScanRequest) returns (stream ScanResponse);
}
